--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,18 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ru.akvine</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>configa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Fit Stats Hub</name>
-	<description>Demo description</description>
+	<description>An application for managing the properties</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
