--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-
+###### Server properties ######
+server.port=8080
+server.servlet.context-path=/configa
+server.servlet.session.timeout=21600
+### Database properties ###
+spring.datasource.url=jdbc:postgresql://localhost:5432/configa
+spring.datasource.username=postgres
+spring.datasource.password=03020057
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+### Custom application properties ###
+pci.enabled=false
+### UUID properties ###
+uuid.length=20
+app.uuid.length=9
+app.uuid.max.length.generation.attempts=100
