save settings to a file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=8080
 server.servlet.context-path=/configa
 server.servlet.session.timeout=21600
 ### Database properties ###
-spring.datasource.url=jdbc:postgresql://localhost:5432/configa
-spring.datasource.username=postgres
-spring.datasource.password=03020057
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=
+spring.jpa.properties.hibernate.dialect=
+spring.jpa.hibernate.ddl-auto=
 ### Custom application properties ###
 pci.enabled=false
 ### UUID properties ###
