--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,9 @@ spring.datasource.driver-class-name=
 spring.jpa.properties.hibernate.dialect=
 spring.jpa.hibernate.ddl-auto=
 ### Custom application properties ###
-pci.enabled=false
+pci.enabled=true
 ### UUID properties ###
 uuid.length=20
 app.uuid.length=9
 app.uuid.max.length.generation.attempts=100
+properties.bytes.file.size.max=10000
